--- a/package.json
+++ b/package.json
@@ -19,6 +19,17 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@ngrx/effects": "^8.5.2",
+    "@ngrx/entity": "^8.6.0",
+    "@ngrx/schematics": "^8.6.0",
+    "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
+    "ngx-bootstrap": "5.1.0",
+    "ngx-spinner": "8.0.3",
+    "ngx-toastr": "11.2.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
