--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@ngrx/schematics": "^8.6.0",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "ngrx-store-persist": "^1.0.20",
     "ngx-bootstrap": "5.1.0",
     "ngx-spinner": "8.0.3",
     "ngx-toastr": "11.2.1",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
